@@ -25,10 +25,10 @@ import org.dockbox.hartshorn.api.i18n.common.Language;
 import org.dockbox.hartshorn.api.i18n.common.ResourceEntry;
 import org.dockbox.hartshorn.api.i18n.text.Text;
 import org.dockbox.hartshorn.commands.definition.ArgumentConverter;
-import org.dockbox.hartshorn.di.annotations.Service;
+import org.dockbox.hartshorn.di.annotations.service.Service;
 import org.dockbox.hartshorn.di.properties.InjectableType;
 import org.dockbox.hartshorn.di.properties.InjectorProperty;
-import org.dockbox.hartshorn.di.services.ServiceContainer;
+import org.dockbox.hartshorn.di.services.ComponentContainer;
 import org.dockbox.hartshorn.util.HartshornUtils;
 import org.jetbrains.annotations.NonNls;
 
@@ -38,7 +38,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.UUID;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @SuppressWarnings({ "unused", "ClassWithTooManyFields" })
 @Service
@@ -55,15 +54,10 @@ public final class DefaultArgumentConverters implements InjectableType {
             }).build();
 
     public static final ArgumentConverter<Boolean> BOOLEAN = CommandValueConverter.builder(Boolean.class, "bool", "boolean")
-            .withConverter(in -> {
-                switch (in) {
-                    case "yes":
-                        return Exceptional.of(true);
-                    case "no":
-                        return Exceptional.of(false);
-                    default:
-                        return Exceptional.of(in).map(Boolean::parseBoolean);
-                }
+            .withConverter(in -> switch (in) {
+                case "yes" -> Exceptional.of(true);
+                case "no" -> Exceptional.of(false);
+                default -> Exceptional.of(in).map(Boolean::parseBoolean);
             }).withSuggestionProvider(in -> HartshornUtils.asList("true", "false", "yes", "no"))
             .build();
 
@@ -110,7 +104,7 @@ public final class DefaultArgumentConverters implements InjectableType {
                 }
                 return suggestions.stream()
                         .filter(lang -> lang.toLowerCase().contains(in.toLowerCase()))
-                        .collect(Collectors.toList());
+                        .toList();
             }).build();
 
     public static final ArgumentConverter<UUID> UNIQUE_ID = CommandValueConverter.builder(UUID.class, "uuid", "uniqueId")
@@ -148,16 +142,16 @@ public final class DefaultArgumentConverters implements InjectableType {
             .withConverter(in -> Exceptional.of(Text.of(in)))
             .build();
 
-    public static final ArgumentConverter<ServiceContainer> SERVICE = CommandValueConverter.builder(ServiceContainer.class, "service")
+    public static final ArgumentConverter<ComponentContainer> SERVICE = CommandValueConverter.builder(ComponentContainer.class, "service")
             .withConverter(in -> Exceptional.of(Hartshorn.context()
                     .locator().containers().stream()
                     .filter(container -> container.getId().equalsIgnoreCase(in))
                     .findFirst()))
             .withSuggestionProvider((in) -> Hartshorn.context()
                     .locator().containers().stream()
-                    .map(ServiceContainer::getId)
+                    .map(ComponentContainer::getId)
                     .filter(id -> id.toLowerCase(Locale.ROOT).startsWith(in.toLowerCase(Locale.ROOT)))
-                    .collect(Collectors.toList()))
+                    .toList())
             .build();
 
     public static final ArgumentConverter<String> REMAINING_STRING = CommandValueConverter.builder(String.class, "remaining", "remainingString")
