@@ -19,7 +19,7 @@ package org.dockbox.hartshorn.api.i18n;
 
 import org.dockbox.hartshorn.api.Hartshorn;
 import org.dockbox.hartshorn.api.i18n.annotations.Resource;
-import org.dockbox.hartshorn.di.services.ServiceContainer;
+import org.dockbox.hartshorn.di.services.ComponentContainer;
 import org.dockbox.hartshorn.test.HartshornRunner;
 import org.dockbox.hartshorn.util.HartshornUtils;
 import org.dockbox.hartshorn.util.Reflect;
@@ -41,13 +41,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Properties;
-import java.util.stream.Collectors;
 
 /**
  * Generator type which directly creates and outputs a translation batch based on
  * the currently registered Resource providers.
  */
-public class TranslationBatchGenerator {
+public final class TranslationBatchGenerator {
 
     private static final List<String> BLACKLIST = HartshornUtils.asList(
             // Test resources
@@ -108,12 +107,12 @@ public class TranslationBatchGenerator {
     public static Map<String, String> collect() {
         Map<String, String> batch = HartshornUtils.emptyMap();
         int i = 0;
-        for (ServiceContainer container : Hartshorn.context().locator().containers()) {
+        for (ComponentContainer container : Hartshorn.context().locator().containers()) {
             final Class<?> type = container.getType();
-            final Collection<Method> methods = Reflect.annotatedMethods(type, Resource.class);
+            final Collection<Method> methods = Reflect.methods(type, Resource.class);
             for (Method method : methods) {
                 i++;
-                final Resource annotation = method.getAnnotation(Resource.class);
+                final Resource annotation = Reflect.annotation(method, Resource.class).get();
                 final String key = I18N.key(type, method);
                 batch.put(key, annotation.value());
             }
@@ -179,7 +178,7 @@ public class TranslationBatchGenerator {
         if (batch.exists() && batch.isDirectory()) {
             return HartshornUtils.asList(batch.listFiles()).stream()
                     .filter(f -> !f.isDirectory())
-                    .collect(Collectors.toList());
+                    .toList();
         } else throw new IllegalStateException("Existing batch could not be found");
     }
 
