@@ -20,22 +20,25 @@ package org.dockbox.hartshorn.server.minecraft;
 import org.dockbox.hartshorn.api.Hartshorn;
 import org.dockbox.hartshorn.api.domain.Exceptional;
 import org.dockbox.hartshorn.api.domain.tuple.Vector3N;
-import org.dockbox.hartshorn.commands.definition.ArgumentConverter;
 import org.dockbox.hartshorn.commands.arguments.CommandValueConverter;
 import org.dockbox.hartshorn.commands.arguments.DefaultArgumentConverters;
-import org.dockbox.hartshorn.di.annotations.Service;
+import org.dockbox.hartshorn.commands.definition.ArgumentConverter;
+import org.dockbox.hartshorn.di.annotations.service.Service;
 import org.dockbox.hartshorn.di.properties.InjectableType;
 import org.dockbox.hartshorn.di.properties.InjectorProperty;
+import org.dockbox.hartshorn.server.minecraft.dimension.Block;
+import org.dockbox.hartshorn.server.minecraft.dimension.BlockContext;
 import org.dockbox.hartshorn.server.minecraft.dimension.Worlds;
 import org.dockbox.hartshorn.server.minecraft.dimension.position.Location;
 import org.dockbox.hartshorn.server.minecraft.dimension.world.World;
+import org.dockbox.hartshorn.server.minecraft.item.Item;
+import org.dockbox.hartshorn.server.minecraft.item.ItemContext;
 import org.dockbox.hartshorn.server.minecraft.players.Player;
 import org.dockbox.hartshorn.server.minecraft.players.Players;
+import org.dockbox.hartshorn.util.HartshornUtils;
 
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-@SuppressWarnings({ "unused", "ClassWithTooManyFields" })
 @Service
 public final class MinecraftArgumentConverters implements InjectableType {
 
@@ -57,7 +60,7 @@ public final class MinecraftArgumentConverters implements InjectableType {
                 Vector3N vec = DefaultArgumentConverters.VECTOR.convert(cs, xyz).or(Vector3N.of(0, 0, 0));
                 World world = WORLD.convert(cs, xyzw[3]).or(World.empty());
 
-                return Exceptional.of(new Location(vec, world));
+                return Exceptional.of(Location.of(vec, world));
             }).build();
 
     public static final ArgumentConverter<Player> PLAYER = CommandValueConverter.builder(Player.class, "player", "user")
@@ -77,7 +80,23 @@ public final class MinecraftArgumentConverters implements InjectableType {
             }).withSuggestionProvider(in -> Hartshorn.context().get(Players.class).getOnlinePlayers().stream()
                     .map(Player::getName)
                     .filter(n -> n.startsWith(in))
-                    .collect(Collectors.toList()))
+                    .toList())
+            .build();
+
+    public static final ArgumentConverter<Item> ITEM = CommandValueConverter.builder(Item.class, "item")
+            .withConverter(in -> Exceptional.of(Item.of(in)))
+            .withSuggestionProvider(in -> Hartshorn.context()
+                    .first(ItemContext.class)
+                    .map(ItemContext::getIds)
+                    .orElse(HartshornUtils::emptyList).get())
+            .build();
+
+    public static final ArgumentConverter<Block> BLOCK = CommandValueConverter.builder(Block.class, "block")
+            .withConverter(in -> Exceptional.of(Block.of(in)))
+            .withSuggestionProvider(in -> Hartshorn.context()
+                    .first(BlockContext.class)
+                    .map(BlockContext::getIds)
+                    .orElse(HartshornUtils::emptyList).get())
             .build();
 
     @Override
